# CrossLib

./: .gitignore  Cargo.toml  Makefile  README.md  settings.gradle
crosslib-core/: Cargo.toml  README.md
crosslib-core/android/: build.gradle  settings.gradle
crosslib-core/android/crosslib/: build.gradle  consumer-rules.pro
crosslib-core/android/crosslib/src/androidTest/java/com/steadbytes/crosslib/: ExampleInstrumentedTest.kt
crosslib-core/android/crosslib/src/main/: AndroidManifest.xml
crosslib-core/android/crosslib/src/main/java/com/steadbytes/crosslib/: IDGenerator.kt
crosslib-core/android/crosslib/src/test/java/com/steadbytes/crosslib/: IDGeneratorTest.kt
crosslib-core/android/gradle/wrapper/: gradle-wrapper.properties
crosslib-core/android/src/androidTest/java/com/steadbytes/crosslib/: ExampleInstrumentedTest.kt
crosslib-core/ffi/: Cargo.toml  README.md  cbindgen.toml  crosslib.h
crosslib-core/ffi/src/: lib.rs
crosslib-core/python/: README.md  conftest.py  requirements_dev.txt  setup.py
crosslib-core/python/crosslib/: __init__.py  ffi.py
crosslib-core/python/tests/: test_crosslib.py
crosslib-core/src/: lib.rs
examples/android/app/: README.md  build.gradle
examples/android/app/src/androidTest/java/com/steadbytes/crosslibexample/: MainActivityTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/steadbytes/crosslibexample/: MainActivity.kt
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml
(+1 files in other folders)
