[package]
name = "crosslib-ffi"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
edition = "2018"
include = [
	"README.md",
	"src/**/*",
	"Cargo.toml",
	"cbindgen.toml",
	"crosslib.h"
]

[lib]
name = "crosslib_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
crosslib-core = { version = "0.0.1", path = ".."}
ffi-support = "0.4"
libc = "0.2"

